[Bug][Fixed] Some Blogs Not Responsive

--- a/src/templates/blog.css
+++ b/src/templates/blog.css
@@ -4,6 +4,8 @@ body {
 .blog__content__inner {
     padding-bottom: 24px;
     padding-top: 0px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 .backdrop {
@@ -262,6 +264,7 @@ a {
 }
 
 .blog__content {
+    width: 100%;
     max-width: 880px;
     margin-top: 24px;
     margin-bottom: 10px;
@@ -416,9 +419,11 @@ deckgo-highlight-code {
 }
 
 .blog__content img {
+    width: 100%;
     border-radius: 4px;
     box-shadow: 0px 10px 10px -2px rgba(30, 60, 114, 0.15);
 }
+
 .gatsby-resp-image-background-image {
     margin: 48px 0px;
     margin-bottom: 0;
@@ -529,7 +534,7 @@ h6 {
 }
 
 .share__buttons {
-    margin-top: -16px;
+    margin-top: 8px;
     margin-bottom: 10px;
     margin-left: 16px;
 }
@@ -865,6 +870,8 @@ h6 {
     }
     .blog__content__inner {
         padding-top: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 
     .chapters__blog {
